--- a/dev_notes/Yoshimi Control Data/Sections/config.html
+++ b/dev_notes/Yoshimi Control Data/Sections/config.html
@@ -180,10 +180,24 @@
         <td>255</td>
         <td>Oscillator size (powers of 2)</td>
       </tr>
+            <tr>
+        <td>singleRowPanel</td>
+        <td>0,1</td>
+        <td>19</td>
+        <td>248</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>GUI only TODO integrate properly</td>
+      </tr>
+
       <tr>
         <td>reportsDestination</td>
         <td>0,1</td>
-        <td>19</td>
+        <td>20</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -196,7 +210,7 @@
       <tr>
         <td>logTextSize</td>
         <td>0~100</td>
-        <td>20</td>
+        <td>21</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -209,7 +223,7 @@
       <tr>
         <td>padSynthInterpolation</td>
         <td>0,1</td>
-        <td>21</td>
+        <td>22</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -222,7 +236,7 @@
       <tr>
         <td>virtualKeyboardLayout</td>
         <td>0~3</td>
-        <td>22</td>
+        <td>23</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -235,7 +249,7 @@
       <tr>
         <td>savedInstrumentFormat</td>
         <td>1~3</td>
-        <td>23</td>
+        <td>24</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -248,7 +262,7 @@
       <tr>
         <td>hideNonFatalErrors</td>
         <td>0,1</td>
-        <td>24</td>
+        <td>25</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -261,7 +275,7 @@
       <tr>
         <td>logInstrumentLoadTimes</td>
         <td>0,1</td>
-        <td>25</td>
+        <td>26</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -274,7 +288,7 @@
       <tr>
         <td>logXMLheaders</td>
         <td>0,1</td>
-        <td>26</td>
+        <td>27</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -287,7 +301,7 @@
       <tr>
         <td>saveAllXMLdata</td>
         <td>0,1</td>
-        <td>27</td>
+        <td>28</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -300,7 +314,7 @@
       <tr>
         <td>enableHighlight</td>
         <td>0,1</td>
-        <td>28</td>
+        <td>29</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -326,7 +340,7 @@
       <tr>
         <td>jackMidiSource</td>
         <td>~ ~</td>
-        <td>32</td>
+        <td>30</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -339,7 +353,7 @@
       <tr>
         <td>jackPreferredMidi</td>
         <td>0,1</td>
-        <td>33</td>
+        <td>31</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -352,7 +366,7 @@
       <tr>
         <td>jackServer</td>
         <td>~ ~</td>
-        <td>34</td>
+        <td>32</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -365,7 +379,7 @@
       <tr>
         <td>jackPreferredAudio</td>
         <td>0,1</td>
-        <td>35</td>
+        <td>33</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -378,7 +392,7 @@
       <tr>
         <td>jackAutoConnectAudio</td>
         <td>0,1</td>
-        <td>36</td>
+        <td>34</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -404,7 +418,7 @@
       <tr>
         <td>alsaMidiSource</td>
         <td>~ ~</td>
-        <td>48</td>
+        <td>35</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -417,7 +431,7 @@
       <tr>
         <td>alsaPreferredMidi</td>
         <td>0,1</td>
-        <td>49</td>
+        <td>36</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -430,7 +444,7 @@
       <tr>
         <td>alsaMidiType</td>
         <td>0~2</td>
-        <td>50</td>
+        <td>37</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -443,7 +457,7 @@
       <tr>
         <td>alsaAudioDevice</td>
         <td>~ ~</td>
-        <td>51</td>
+        <td>38</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -456,7 +470,7 @@
       <tr>
         <td>alsaPreferredAudio</td>
         <td>0,1</td>
-        <td>52</td>
+        <td>39</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -469,7 +483,7 @@
       <tr>
         <td>alsaSampleRate</td>
         <td>0~3</td>
-        <td>53</td>
+        <td>40</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -482,7 +496,7 @@
       <tr>
         <td>readAudio</td>
         <td>~ ~</td>
-        <td>54</td>
+        <td>41</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -493,9 +507,9 @@
         <td>Read audio destination</td>
       </tr>
       <tr>
-        <td>readMidi</td>
+        <td>readMIDI</td>
         <td>~ ~</td>
-        <td>55</td>
+        <td>42</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -521,7 +535,7 @@
       <tr>
         <td>addPresetRootDir</td>
         <td>~ ~</td>
-        <td>60</td>
+        <td>43</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -534,7 +548,7 @@
       <tr>
         <td>removePresetRootDir</td>
         <td>0~127</td>
-        <td>61</td>
+        <td>44</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -545,9 +559,9 @@
         <td>Remove selected preset root</td>
       </tr>
       <tr>
-        <td>currentPresetRootDir</td>
+        <td>currentPresetRoot</td>
         <td>0~127</td>
-        <td>62</td>
+        <td>45</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -573,7 +587,7 @@
       <tr>
         <td>bankRootCC</td>
         <td>0,32,other</td>
-        <td>65</td>
+        <td>46</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -586,7 +600,7 @@
       <tr>
         <td>bankCC</td>
         <td>0,32,other</td>
-        <td>67</td>
+        <td>47</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -599,7 +613,7 @@
       <tr>
         <td>enableProgramChange</td>
         <td>0,1</td>
-        <td>68</td>
+        <td>48</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -610,9 +624,9 @@
         <td>Enable MIDI program change</td>
       </tr>
       <tr>
-        <td>extendedProgramChange</td>
+        <td>extendedProgramChangeCC</td>
         <td>0~119,other</td>
-        <td>71</td>
+        <td>49</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -625,7 +639,7 @@
       <tr>
         <td>ignoreResetAllCCs</td>
         <td>0,1</td>
-        <td>72</td>
+        <td>50</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -638,7 +652,7 @@
       <tr>
         <td>logIncomingCCs</td>
         <td>0,1</td>
-        <td>73</td>
+        <td>51</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -651,7 +665,7 @@
       <tr>
         <td>showLearnEditor</td>
         <td>0,1</td>
-        <td>74</td>
+        <td>52</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -664,7 +678,7 @@
       <tr>
         <td>enableNRPNs</td>
         <td>0,1</td>
-        <td>75</td>
+        <td>53</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -690,7 +704,7 @@
       <tr>
         <td>saveCurrentConfig</td>
         <td>~ ~</td>
-        <td>80</td>
+        <td>54</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -703,7 +717,7 @@
       <tr>
         <td>historyLock</td>
         <td>0,1</td>
-        <td>81</td>
+        <td>55</td>
         <td>248</td>
         <td>0~5</td>
         <td>255</td>
