--- a/dev_notes/Yoshimi Control Data/Sections/config.html
+++ b/dev_notes/Yoshimi Control Data/Sections/config.html
@@ -117,9 +117,22 @@
         <td>Set PadSynth build method<br>Legacy, Background Auto-apply</td>
       </tr>
       <tr>
+        <td>BanksChecked</td>
+        <td>0,1</td>
+        <td>8</td>
+        <td>248</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Confirm a valid set of banks - system defined</td>
+      </tr>
+      <tr>
         <td>XMLcompressionLevel</td>
         <td>0~9</td>
-        <td>7</td>
+        <td>8</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
