BugFix: Not saving root and bank changes. Updated Control Data.

--- a/dev_notes/Yoshimi Control Data/Sections/config.html
+++ b/dev_notes/Yoshimi Control Data/Sections/config.html
@@ -714,6 +714,32 @@
         <td>Save the complete configuration regardless of whether or not it has changed (dummy text)</td>
       </tr>
       <tr>
+        <td>changeRoot</td>
+        <td>~ ~</td>
+        <td>54</td>
+        <td>248</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Store the current bank root ID</td>
+      </tr>
+      <tr>
+        <td>changeBank</td>
+        <td>~ ~</td>
+        <td>55</td>
+        <td>248</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Store the current bank ID</td>
+      </tr>
+      <tr>
         <td>historyLock</td>
         <td>0,1</td>
         <td>54</td>
