Corrected minor errors in HTML Control Data files. Added red-tint-clr to doc/examples.

--- a/dev_notes/Yoshimi Control Data/Sections/addvoice.html
+++ b/dev_notes/Yoshimi Control Data/Sections/addvoice.html
@@ -718,7 +718,7 @@
   <table>
     <thead>
       <tr>
-        <th>PART::control +</th>
+        <th>ADDVOICE::control +</th>
         <th>value</th>
         <th>control</th>
         <th>part /<br>section</th>
