--- a/dev_notes/Yoshimi Control Data/Sections/config.html
+++ b/dev_notes/Yoshimi Control Data/Sections/config.html
@@ -759,7 +759,7 @@
   <table>
     <thead>
       <tr>
-        <th>PART::control +</th>
+        <th>CONFIG::control +</th>
         <th>value</th>
         <th>control</th>
         <th>part /<br>section</th>
