--- a/dev_notes/Yoshimi Control Data/Sections/main.html
+++ b/dev_notes/Yoshimi Control Data/Sections/main.html
@@ -575,7 +575,7 @@
   <table>
     <thead>
       <tr>
-        <th>PART::control +</th>
+        <th>MAIN::control +</th>
         <th>value</th>
         <th>control</th>
         <th>part /<br>section</th>
