--- a/dev_notes/Yoshimi Control Data/Sections/oscillator.html
+++ b/dev_notes/Yoshimi Control Data/Sections/oscillator.html
@@ -485,7 +485,7 @@
   <table>
     <thead>
       <tr>
-        <th>PART::control +</th>
+        <th>OSCILLATOR::control +</th>
         <th>value</th>
         <th>control</th>
         <th>part /<br>section</th>
