--- a/dev_notes/Yoshimi Control Data/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Control Data/Sections/toplevel.html
@@ -164,7 +164,7 @@
         <td style="border:none">List</td>
         <td style="border:none">0~2</td>
         <td style="border:none">0</td>
-        <td style="text-align:left;border:none">Returns a lists of all the presets for the current section.<br>If 'value' = 1 returns a msgID for the preset type.<br>If 'value' = 2 only returns returns a msgID if there is a clipboard entry for that type.
+        <td style="text-align:left;border:none">Returns a lists of all the presets for the current section.<br>If 'value' = 1 returns a msgID for the preset type.<br>If 'value' = 2 only returns a msgID if there is a clipboard entry for that type.
       </tr>
       <tr>
         <td style="border:none">&emsp;</td>
