Instances: activate post-boot-hook via command system
with the new lifecycle, it is now possible to run some action
as soon as the Synth instance becomes fully operational;
the Gui-Master too was already created at that point.

--- a/dev_notes/Yoshimi Control Data/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Control Data/Sections/toplevel.html
@@ -52,6 +52,19 @@
         <td>dataExchange</td>
         <td>~ ~</td>
         <td>250</td>
+        <td>240</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>~ ~</td>
+        <td>Start-up hook, signals Synth is ready for processing</td>
+      </tr>
+      <tr>
+        <td>dataExchange</td>
+        <td>~ ~</td>
+        <td>250</td>
         <td>250</td>
         <td>~ ~</td>
         <td>~ ~</td>
