Instances: introduce a dedicated post-boot refresh for the GUI
Whenever a Synth instance completes the BOOTING phase and is about
to enter the RUNNING phase, we send a trigger message with
 * control = TOPLEVEL::control::dataExchange (=250)
 * part    = TOPLEVEL::section::main         (=240)

This is received now...
 * within the Synth-Thread -> SynthEngine::postBootHook()
 * within the GUI-Thread   -> MasterUI::refreshInit()

--- a/dev_notes/Yoshimi Control Data/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Control Data/Sections/toplevel.html
@@ -59,7 +59,7 @@
         <td>~ ~</td>
         <td>~ ~</td>
         <td>~ ~</td>
-        <td>Start-up hook, signals Synth is ready for processing</td>
+        <td>Start-up hook, complete setup in Synth and refresh UI</td>
       </tr>
       <tr>
         <td>dataExchange</td>
@@ -72,7 +72,7 @@
         <td>~ ~</td>
         <td>buff&nbsp;No.</td>
         <td>~ ~</td>
-        <td>Notify for GuiDataExchange, data in designated buffer</td>
+        <td>GuiDataExchange: push-update in designated buffer</td>
       </tr>
       <tr>
         <td>copyPaste</td>
