Instances: integrate LV2 with the InstanceManager
- adjust lib linkage to include MusicClient, but avoid linking against ALSA/Jack
- reorganise the start-up functionality to use the (up to now empty)
  hooks of MusicIO to initialise buffers and configure the instance
- extend InstanceManger to accept a Functor for instantiating the plug-in
- use the new lifecycle steps in InstanceManager to activate the reorganised
  start-up tasks for LV2
- handle shutdown of plug-in instance by delegating through InstanceManager
- allow LV2 to trigger GUI start later on-demand,
  by delegating through InstanceManager to use the new connection mechanism
- as a special twist, the sequence for launching the GUI-connection
  must be idempotent, because LV2 may destroy the LV2-GUI-plugin, which
  then possibly needs to be reinstantiated and reconnected later.
  The key trick is to place an (possibly redundant) seed-message
  for the GuiAnchor into the ringbuffer when pulling up the GUI

- sort out structure of the LV2 GUI plugin
  The existing definition was needlessly convoluted
- the UI close callback can be simplified by using lambda functions

- the LV2_INSTANCE_ACCESS_URI feature is mandatory;
  in its current shape, without a total rewrite of most of Yoshimi,
  it is outright impossible to comply to the strict LV2 model with a separate UI.

- ensure proper locking to protect the shared synth instance table;
  the LV2 standard clearly permits to invoke _instance functions_ of
  _different instances_ concurrently
- moreover, attempt to handle FTLK locking defensively, and as required
  by FLTK, i.e. set the Fl::lock() only once before creating the first widget
- introduce a synchronisation between startup of the core plugin and
  init of the GUI plugin, due to races observed in some corner cases

--- a/dev_notes/Yoshimi Control Data/Sections/toplevel.html
+++ b/dev_notes/Yoshimi Control Data/Sections/toplevel.html
@@ -56,7 +56,7 @@
         <td>~ ~</td>
         <td>~ ~</td>
         <td>~ ~</td>
-        <td>~ ~</td>
+        <td>is init</td>
         <td>~ ~</td>
         <td>~ ~</td>
         <td>Start-up hook, complete setup in Synth and refresh UI</td>
