Installed placeholder for new Window Geometry code.     This will initially only be available to the CLI     Updated Yopshimi Control Data Added new bank entries to Drums and Pads.     All from Lorenzo Further adjustments to textlists.cpp     There were still come inconsitencies

--- a/dev_notes/Yoshimi Control Data/index.html
+++ b/dev_notes/Yoshimi Control Data/index.html
@@ -21,6 +21,9 @@
     <a href="Sections/toplevel.html">Top Level Controls</a>
     <br>
     <br>
+    <a href="Sections/geometry.html">Window Geometery</a>
+    <br>
+    <br>
     <a href="Sections/config.html">Configuration Controls</a>
     <br>
     <br>
