Renamed new Geometry section to Display. Added theme control placeholder values. Implemented mininum controls to report skeleton use     in interchange.cpp Partially updated Control Data entries.

--- a/dev_notes/Yoshimi Control Data/Sections/display.html
+++ b/dev_notes/Yoshimi Control Data/Sections/display.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>Vectors</title>
+  <title>Window Display</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -9,7 +9,7 @@
   <table>
     <thead>
       <tr>
-        <th>Geometry::control:: +</th>
+        <th>DISPLAY::control:: +</th>
         <th>value</th>
         <th>control</th>
         <th>part /<br>section</th>
@@ -87,6 +87,97 @@
         <td>255</td>
         <td>255</td>
         <td>Window size (whichever is greater)<br>max width - xposition - min window width<br>max height - yposition - min window height</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Select</td>
+        <td>~ ~</td>
+        <td>5</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Copy</td>
+        <td>~ ~</td>
+        <td>6</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Rename</td>
+        <td>~ ~</td>
+        <td>7</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Delete</td>
+        <td>~ ~</td>
+        <td>8</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Import</td>
+        <td>~ ~</td>
+        <td>9</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>Export</td>
+        <td>~ ~</td>
+        <td>10</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
     </tbody>
   </table>
