--- a/dev_notes/Yoshimi Control Data/index.html
+++ b/dev_notes/Yoshimi Control Data/index.html
@@ -21,7 +21,7 @@
     <a href="Sections/toplevel.html">Top Level Controls</a>
     <br>
     <br>
-    <a href="Sections/geometry.html">Window Geometery</a>
+    <a href="Sections/display.html">Window Display</a>
     <br>
     <br>
     <a href="Sections/config.html">Configuration Controls</a>
