Developing the idea of locking the keyboard focus to a terminal window     by abousing FLTKs modal control feature.

--- a/dev_notes/Yoshimi Control Data/Sections/config.html
+++ b/dev_notes/Yoshimi Control Data/Sections/config.html
@@ -76,11 +76,23 @@
         <td>255</td>
         <td>Show CLI context level -- off, on, prompt</td>
       </tr>
+        <td>fixKeysToCLI</td>
+        <td>~</td>
+        <td>4</td>
+        <td>248</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Force keyboard entry to stay with the CLI<br>if GUI enabled</td>
+      </tr>
 
       <tr>
         <td>enableSinglePath</td>
         <td>0,1</td>
-        <td>4</td>
+        <td>5</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -93,7 +105,7 @@
       <tr>
         <td>enableAutoInstance</td>
         <td>0,1</td>
-        <td>5</td>
+        <td>6</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -106,7 +118,7 @@
       <tr>
         <td>handlePadSynthBuild</td>
         <td>0~2</td>
-        <td>6</td>
+        <td>7</td>
         <td>248</td>
         <td>255</td>
         <td>2</td>
@@ -119,7 +131,7 @@
       <tr>
         <td>enablePartReports</td>
         <td>64 bit</td>
-        <td>7</td>
+        <td>8</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -132,7 +144,7 @@
       <tr>
         <td>banksChecked</td>
         <td>0,1</td>
-        <td>8</td>
+        <td>9</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
@@ -145,7 +157,7 @@
       <tr>
         <td>XMLcompressionLevel</td>
         <td>0~9</td>
-        <td>9</td>
+        <td>10</td>
         <td>248</td>
         <td>255</td>
         <td>255</td>
