BugFix: Some part level changes were reporting an unrecognised effect. This was caused by the position of effectNumber in globals.h Moving this past those controls so that it is with the other effect controls cures the problem. It seems it is acting as a group boundary.

--- a/dev_notes/Yoshimi Control Data/Sections/part.html
+++ b/dev_notes/Yoshimi Control Data/Sections/part.html
@@ -285,7 +285,7 @@
       </tr>
       <tr>
       <tr>
-        <td colspan="11">None of the above mark instrument changed</td>
+        <td colspan="11">All the controls below mark instrument changed</td>
       </tr>
       <tr>
         <td>enableKitLine</td>
@@ -378,32 +378,6 @@
         <td>Key aftertouch -- off, filter cutoff + filter Q<br>+ pitchbend + modulation</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>effectNumber</td>
-        <td>0~2</td>
-        <td>40</td>
-        <td>0~63</td>
-        <td>17</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>Set effect number</td>
-      </tr>
-      <tr>
         <td>portamento</td>
         <td>0,1</td>
         <td>41</td>
@@ -415,19 +389,6 @@
         <td>255</td>
         <td>255</td>
         <td>Portamento</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
       </tr>
       <tr>
         <td>humanise</td>
@@ -480,6 +441,32 @@
         <td>255</td>
         <td>255</td>
         <td>Mode -- Off, Multi, Single,<br>Crossfade velocity, Crossfade volume</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>effectNumber</td>
+        <td>0~2</td>
+        <td>40</td>
+        <td>0~63</td>
+        <td>17</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Set effect number</td>
       </tr>
       <tr>
         <td>kitEffectNum</td>
